modificando para unificar cards

--- a/PETSHOP FINAL/jugueteria.html
+++ b/PETSHOP FINAL/jugueteria.html
@@ -76,8 +76,8 @@
                     <p class="fw-bolder text-white display-6 text-center">Ultimas unidades en Stock!</p>
                 </div>
                 <div class="d-flex justify-content-center align-items-center flex-wrap gap-3">
-                    <div data-aos="flip-up" v-for="producto in ultimosProductos" class="card card-juguete" style="width: 22rem; height:35rem;">
-                        <img :src="producto.imagen" class="card-img-top h-75" alt="imagen de card" style="width: 100%; ">
+                    <div data-aos="flip-up" v-for="producto in ultimosProductos" class="card card-juguete" id="card">
+                        <img :src="producto.imagen" class="card-img-top h-75" alt="imagen de card">
                         <div class="card-body h-25" style="border-top: 1px solid black;">
                             <h5 class="card-title text-center h-50">{{producto.nombre}}</h5>
                             <p class="text-center text-center h-50">Precio:${{producto.precio}}</p>
@@ -87,8 +87,8 @@
                 
             </div>
             <div class="container d-flex justify-content-center align-items-center flex-wrap gap-3">
-                <div v-for="producto in productos" class="card card-juguete" style="width: 22rem; height:35rem;">
-                    <img :src="producto.imagen" class="card-img-top h-75" alt="imagen de card" style="width: 100%; ">
+                <div v-for="producto in productos" class="card card-juguete" id="card">
+                    <img :src="producto.imagen" class="card-img-top h-75" alt="imagen de card" >
                         <div class="card-body h-25" style="border-top: 1px solid black;">
                             <h5 class="card-title text-center h-50">{{producto.nombre}}</h5>
                             <p class="text-center text-center h-50">Precio:${{producto.precio}}</p>
