--- a/PETSHOP FINAL/index.html
+++ b/PETSHOP FINAL/index.html
@@ -86,7 +86,7 @@
             </div>
             {{filtro}}
             <div v-if="buscador!=''" class="row p-md-3 p-2 gap-4 flex-wrap justify-content-center container-fluid">
-                <div v-for="producto in productos" class="card" id="card" style="width: 18rem;">
+                <div v-for="producto in productos" class="card" id="card">
                     <img :src="producto.imagen" class="card-img-top" alt="{{producto.nombre}}" />
                     <div class="card-body d-flex flex-column justify-content-between">
                         <h5 class="card-title">{{producto.nombre}}</h5>
