--- a/PETSHOP FINAL/index.html
+++ b/PETSHOP FINAL/index.html
@@ -91,7 +91,10 @@
                     <div class="card-body d-flex flex-column justify-content-between">
                         <h5 class="card-title">{{producto.nombre}}</h5>
                         <p class="card-text">price: $ {{producto.precio}}</p>
-                        <a :href="'./detalles.html?id='+producto._id" class="btn btn-primary">Detalles</a>
+                        <div>
+                            <a :href="'./detalles.html?id='+producto._id" class="btn btn-primary">Detalles</a>
+                            <a :href="#" class="btn btn-primary">Agregar al Carrito</a>
+                        </div>
                     </div>
                 </div>
             </div>
