--- a/PETSHOP FINAL/index.html
+++ b/PETSHOP FINAL/index.html
@@ -91,9 +91,9 @@
                     <div class="card-body d-flex flex-column justify-content-between">
                         <h5 class="card-title">{{producto.nombre}}</h5>
                         <p class="card-text">price: $ {{producto.precio}}</p>
-                        <div>
-                            <a :href="'./detalles.html?id='+producto._id" class="btn btn-primary">Detalles</a>
-                            <a :href="#" class="btn btn-primary">Agregar al Carrito</a>
+                        <div class="d-flex justify-content-center">
+                            <a :href="'./detalles.html?id='+producto._id" class="btn bg-verdeO text-white p-2 m-0 align-self-center">Detalles</a>
+                            <a :href="" class="btn btn-primary p-2 m-0">Agregar al Carrito</a>
                         </div>
                     </div>
                 </div>
