--- a/PETSHOP FINAL/index.html
+++ b/PETSHOP FINAL/index.html
@@ -131,6 +131,9 @@
                     </button>
                 </div>
             </div>
+            <div id="logoCarrito">
+                <a href=""><img src="" alt=""></a>
+            </div>
 
             <div class="d-flex justify-content-center align-items-center container-fluid col-11 sobreNos mb-3">
                 <div data-aos="fade-right" data-aos-delay="600" class="p-3">
