--- a/PETSHOP FINAL/carrito.html
+++ b/PETSHOP FINAL/carrito.html
@@ -125,7 +125,7 @@
                         </div>
                     </div>
                     <div class="align-self-end">
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <button type="submit" class="btn btn-primary">Comprar</button>
                 </div>
                 </form>
             </div>
