modificaciones ivan 2am

--- a/PETSHOP FINAL/contacto.html
+++ b/PETSHOP FINAL/contacto.html
@@ -10,6 +10,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/styles/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -29,37 +32,37 @@
                         <div class="navbar-nav row w-100">
                             <div class="nav-item col active">
                                 <a class="nav-link text-light fw-bold d-flex flex-column" href="./index.html">
-                                    <img class="align-self-center" src="./assets/img/homeIcono.png" alt="logo de inicio"
-                                        style="width: 2rem;">
+                                    <img class="align-self-center imgNav" src="./assets/img/homeIcono.png" alt="logo de inicio"
+                                        style="width: 3rem;">
                                     <p class="text-center m-0">Home</p>
                                 </a>
                             </div>
                             <div class="nav-item col">
                                 <a class="nav-link text-light fw-bold d-flex flex-column" href="./jugueteria.html">
-                                    <img class="align-self-center" src="./assets/img/toysIconos.png" alt=""
-                                        style="width: 2rem;">
+                                    <img class="align-self-center imgNav" src="./assets/img/toysIconos.png" alt=""
+                                        style="width: 3rem;">
                                     <p class="text-center m-0">Juguetes</p>
                                 </a>
                             </div>
                             <div class="nav-item col" id="logoNav">
                                 <a class="nav-link text-white fw-bold d-flex flex-column" aria-current="page"
                                     href="./index.html">
-                                    <img class="align-self-center" src="./assets/img/petshoppag.png" alt=""
+                                    <img class="align-self-center imgNav" src="./assets/img/petshoppag.png" alt=""
                                         style="width: 9rem;">
                                 </a>
                             </div>
                             <div class="nav-item col">
                                 <a class="nav-link text-light fw-bold d-flex flex-column" href="./farmacia.html">
-                                    <img class="align-self-center" src="./assets/img/vetIcono.png" alt=""
-                                        style="width: 2rem;">
+                                    <img class="align-self-center imgNav" src="./assets/img/vetIcono.png" alt=""
+                                        style="width: 3rem;">
                                     <p class="text-center m-0">Farmacia</p>
                                 </a>
                             </div>
                             <div class="nav-item col">
                                 <a class="nav-link text-light fw-bold d-flex flex-column"
                                     href="/PETSHOP FINAL/contacto.html">
-                                    <img class="align-self-center" src="./assets/img/contactIcono.png" alt=""
-                                        style="width: 2rem;">
+                                    <img class="align-self-center imgNav" src="./assets/img/contactIcono.png" alt=""
+                                        style="width: 3rem;">
                                     <p class="text-center m-0">Contacto</p>
                                 </a>
                             </div>
