--- a/PETSHOP FINAL/farmacia.html
+++ b/PETSHOP FINAL/farmacia.html
@@ -10,6 +10,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/styles/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -29,35 +32,35 @@
                         <div class="navbar-nav row w-100">
                             <div class="nav-item col">
                                 <a class="nav-link text-light fw-bold d-flex flex-column" href="./index.html">
-                                    <img class="align-self-center" src="./assets/img/homeIcono.png" alt="logo de inicio"
-                                        style="width: 2rem;">
-                                    <p class="text-center m-0">Home</p>
+                                    <img class="align-self-center imgNav" src="./assets/img/homeIcono.png" alt="logo de inicio"
+                                        style="width: 3rem;">
+                                    <p class="text-center m-0">Inicio</p>
                                 </a>
                             </div>
                             <div class="nav-item col">
                                 <a class="nav-link text-light fw-bold d-flex flex-column" href="./jugueteria.html">
-                                    <img class="align-self-center" src="./assets/img/toysIconos.png" alt=""
-                                        style="width: 2rem;">
+                                    <img class="align-self-center imgNav" src="./assets/img/toysIconos.png" alt=""
+                                        style="width: 3rem;">
                                     <p class="text-center m-0">Juguetes</p>
                                 </a>
                             </div>
                             <div class="nav-item col" id="logoNav">
                                 <a class="nav-link text-white fw-bold d-flex flex-column" aria-current="page" href="./index.html">
-                                    <img class="align-self-center" src="./assets/img/petshoppag.png" alt=""
+                                    <img class="align-self-center imgNav" src="./assets/img/petshoppag.png" alt=""
                                         style="width: 9rem;">
                                 </a>
                             </div>
                             <div class="nav-item col">
                                 <a class="nav-link text-light fw-bold d-flex flex-column" href="./farmacia.html">
-                                    <img class="align-self-center" src="./assets/img/vetIcono.png" alt=""
-                                        style="width: 2rem;">
+                                    <img class="align-self-center imgNav" src="./assets/img/vetIcono.png" alt=""
+                                        style="width: 3rem;">
                                     <p class="text-center m-0">Farmacia</p>
                                 </a>
                             </div>
                             <div class="nav-item col">
                                 <a class="nav-link text-light fw-bold d-flex flex-column" href="./contacto.html">
-                                    <img class="align-self-center" src="./assets/img/contactIcono.png" alt=""
-                                        style="width: 2rem;">
+                                    <img class="align-self-center imgNav" src="./assets/img/contactIcono.png" alt=""
+                                        style="width: 3rem;">
                                     <p class="text-center m-0">Contacto</p>
                                 </a>
                             </div>
@@ -65,6 +68,15 @@
                     </div>
                 </div>
             </nav>
+            <form class="bg-verdeO d-flex justify-content-center">
+                <div class="col-auto">
+                    <input v-model="buscador" class="form-control" type="text" placeholder="Buscar en la Página"
+                        aria-label="default input example" />
+                </div>
+                <div class="col-auto">
+                    <button type="submit" class="btn bg-verdeC mb-3" id="btnBuscar">Buscar</button>
+                </div>
+            </form>
         </header>
         <main class="container-fluid pt-3 pb-3">
             <div class="container d-flex justify-content-center align-items-center flex-wrap gap-3">
