--- a/PETSHOP FINAL/index.html
+++ b/PETSHOP FINAL/index.html
@@ -11,6 +11,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
     <link rel="stylesheet" href="./assets/styles/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -31,35 +35,35 @@
                         <div class="navbar-nav row w-100">
                             <div class="nav-item col active">
                                 <a class="nav-link text-light fw-bold d-flex flex-column" href="./index.html">
-                                    <img class="align-self-center" src="./assets/img/homeIcono.png" alt="logo de inicio"
-                                        style="width: 2rem" />
-                                    <p class="text-center m-0">Home</p>
+                                    <img class="align-self-center imgNav" src="./assets/img/homeIcono.png" alt="logo de inicio"
+                                        style="width: 3rem" />
+                                    <p class="text-center m-0">Inicio</p>
                                 </a>
                             </div>
                             <div class="nav-item col">
                                 <a class="nav-link text-light fw-bold d-flex flex-column" href="./jugueteria.html">
-                                    <img class="align-self-center" src="./assets/img/toysIconos.png" alt=""
-                                        style="width: 2rem" />
+                                    <img class="align-self-center imgNav" src="./assets/img/toysIconos.png" alt=""
+                                        style="width: 3rem" />
                                     <p class="text-center m-0">Juguetes</p>
                                 </a>
                             </div>
                             <div class="nav-item col" id="logoNav">
                                 <a class="nav-link text-white fw-bold d-flex flex-column" aria-current="page" href="#">
-                                    <img class="align-self-center" src="./assets/img/petshoppag.png" alt=""
+                                    <img class="align-self-center imgNav" src="./assets/img/petshoppag.png" alt=""
                                         style="width: 9rem" />
                                 </a>
                             </div>
                             <div class="nav-item col">
                                 <a class="nav-link text-light fw-bold d-flex flex-column" href="./farmacia.html">
-                                    <img class="align-self-center" src="./assets/img/vetIcono.png" alt=""
-                                        style="width: 2rem" />
+                                    <img class="align-self-center imgNav" src="./assets/img/vetIcono.png" alt=""
+                                        style="width: 3rem" />
                                     <p class="text-center m-0">Farmacia</p>
                                 </a>
                             </div>
                             <div class="nav-item col">
                                 <a class="nav-link text-light fw-bold d-flex flex-column" href="./contacto.html">
-                                    <img class="align-self-center" src="./assets/img/contactIcono.png" alt=""
-                                        style="width: 2rem" />
+                                    <img class="align-self-center imgNav" src="./assets/img/contactIcono.png" alt=""
+                                        style="width: 3rem" />
                                     <p class="text-center m-0">Contacto</p>
                                 </a>
                             </div>
@@ -73,7 +77,7 @@
                         aria-label="default input example" />
                 </div>
                 <div class="col-auto">
-                    <button type="submit" class="btn btn-primary mb-3">Buscar</button>
+                    <button type="submit" class="btn bg-verdeC mb-3" id="btnBuscar">Buscar</button>
                 </div>
             </form>
         </header>
@@ -90,7 +94,7 @@
                     <img :src="producto.imagen" class="card-img-top" alt="{{producto.nombre}}" />
                     <div class="card-body d-flex flex-column justify-content-between">
                         <h5 class="card-title">{{producto.nombre}}</h5>
-                        <p class="card-text">price: $ {{producto.precio}}</p>
+                        <p class="card-text">Precio: $ {{producto.precio}}</p>
                         <div class="d-flex justify-content-center">
                             <a :href="'./detalles.html?id='+producto._id" class="btn bg-verdeO text-white p-2 m-0 align-self-center">Detalles</a>
                             <a :href="" class="btn btn-primary p-2 m-0">Agregar al Carrito</a>
