--- a/PETSHOP FINAL/jugueteria.html
+++ b/PETSHOP FINAL/jugueteria.html
@@ -69,7 +69,7 @@
         </header>
         <main class="container-fluid pt-3 pb-3 d-flex flex-column gap-2">
             <div class="p-2 rounded-3">
-                <h2 class="text-center text-white display-5 fw-bold">¡Jugueteria de Los Chicuelos!</h2>
+                <h2 class="text-center text-white display-5 fw-bold">¡Jugueteria de Los Chicuelos 3!</h2>
             </div>
             <div class="container bg-coral d-flex justify-content-center align-items-center flex-wrap gap-3 p-3 flex-column rounded-3">
                 <div class=" bg-warning rounded-3 m-2 p-2">
