--- a/PETSHOP FINAL/index.html
+++ b/PETSHOP FINAL/index.html
@@ -20,7 +20,7 @@
 <body>
     <div id="app">
         <header>
-            <nav class="navbar navbar-expand-md bg-verdeO">
+            <nav class="navbar navbar-expand-md bg-verdeO" id="nav">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="./index.html">
                         <img src="./assets/img/losChicuelosletra.png" alt="" id="letrasChicuelos"
@@ -165,20 +165,23 @@
                 </div>
             </div>
         </main>
-        <footer class="container-fluid bg-verdeO d-flex flex-column pt-2">
+        <footer class="container-fluid bg-verdeO d-flex flex-column pt-2    ">
             <div class="w-100 d-flex justify-content-around align-items-center flex-wrap gap-2">
                 <div class="d-flex justify-content-center align-items-center">
-                    <img class="align-self-center" src="./assets/img/petshopfavicon.png" alt=""
-                        style="max-width: 3rem" />
+                    <a href="#nav">
+                        <img class="align-self-center" src="./assets/img/petshopfavicon.png" alt=""
+                        style="max-width: 3rem;">
+                    </a>
+                    
                 </div>
-                <div class="d-flex flex-column ms-2 me-2">
-                    <p class="text-white text-center fw-bold m-0">Nuestas redes</p>
-                    <div class="align-self-center">
+                <div class="d-flex  ms-2 me-2">
+                    <p class="text-white text-center fw-bold m-0">Nuestas redes:</p>
+                    <div class="align-self-center ms-2">
                         <a href="">
-                            <img src="./assets/img/logoinsta.png" alt="" style="width: 1rem" />
+                            <img src="./assets/img/logoinsta.png" alt="" style="width: 2rem;">
                         </a>
                         <a href="">
-                            <img src="./assets/img/facebook-logo.png" alt="" style="width: 1rem" />
+                            <img src="./assets/img/facebook-logo.png" alt="" style="width: 2rem;">
                         </a>
                     </div>
                 </div>
@@ -187,8 +190,8 @@
                 </div>
                 <div class="d-flex justify-content-center align-items-center p-3">
                     <p class="text-white text-center fw-bold m-0">Medios de pago:</p>
-                    <img src="https://www.sumaelectrohogar.com.ar/img/cms/medios-de-pago-suma(2).png" alt=""
-                        style="max-width: 10rem" />
+                    <img src="./assets/img/tarjetas.png" alt=""
+                        style="max-width: 10rem;">
                 </div>
             </div>
         </footer>
