detalles de cards

--- a/PETSHOP FINAL/contacto.html
+++ b/PETSHOP FINAL/contacto.html
@@ -134,14 +134,13 @@
                 </section>
             </div>
         </main>
-        <footer class="container-fluid bg-verdeO d-flex flex-column pt-2    ">
-            <div class="w-100 d-flex justify-content-around align-items-center flex-wrap gap-2">
+        <footer class="container-fluid bg-verdeO d-flex  align-content-center justify-content-center">
+            <div class="w-100 d-flex justify-content-around align-items-center flex-wrap gap-2 p-1">
                 <div class="d-flex justify-content-center align-items-center">
                     <a href="#nav">
                         <img class="align-self-center" src="./assets/img/petshopfavicon.png" alt=""
                         style="max-width: 3rem;">
                     </a>
-                    
                 </div>
                 <div class="d-flex  ms-2 me-2">
                     <p class="text-white text-center fw-bold m-0">Nuestas redes:</p>
