--- a/PETSHOP FINAL/detalles.html
+++ b/PETSHOP FINAL/detalles.html
@@ -5,54 +5,65 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Los Chicuelos</title>
+    <title>Detalles</title>
     <link rel="icon" href="./assets/img/petshopfavicon.png">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./assets/styles/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <div id="app">
         <header>
-            <nav class="navbar navbar-expand-md bg-verdeO">
+            <nav class="navbar navbar-expand-md bg-verdeO" id="nav">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="./index.html">
-                        <img src="./assets/img/losChicuelosletra.png" alt="" id="letrasChicuelos" style="max-width: 6rem;">
+                        <img src="./assets/img/losChicuelosletra.png" alt="" id="letrasChicuelos"
+                            style="max-width: 6rem;">
                     </a>
-                    <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span ><img src="./assets/img/petshopfavicon.png" alt="" style="width: 2rem;"></span>
+                    <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span><img src="./assets/img/petshopfavicon.png" alt="" style="width: 2rem;"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <div class="navbar-nav row w-100">
-                            <div class="nav-item col active"> 
+                            <div class="nav-item col">
                                 <a class="nav-link text-light fw-bold d-flex flex-column" href="./index.html">
-                                    <img class="align-self-center" src="./assets/img/homeIcono.png" alt="logo de inicio" style="width: 2rem;">
-                                    <p class="text-center m-0">Home</p>
+                                    <img class="align-self-center imgNav" src="./assets/img/homeIcono.png"
+                                        alt="logo de inicio" style="width: 3rem;">
+                                    <p class="text-center m-0">Inicio</p>
                                 </a>
                             </div>
                             <div class="nav-item col">
-                                <a class="nav-link text-light fw-bold d-flex flex-column" href="./jugueteria.html" >
-                                    <img class="align-self-center" src="./assets/img/toysIconos.png" alt="" style="width: 2rem;">
+                                <a class="nav-link text-light fw-bold d-flex flex-column" href="./jugueteria.html">
+                                    <img class="align-self-center imgNav" src="./assets/img/toysIconos.png" alt=""
+                                        style="width: 3rem;">
                                     <p class="text-center m-0">Juguetes</p>
                                 </a>
                             </div>
-                            <div class="nav-item col" id="logoNav">
-                                <a class="nav-link text-white fw-bold d-flex flex-column" aria-current="page" href="#">
-                                    <img class="align-self-center" src="./assets/img/petshoppag.png" alt="" style="width: 9rem;"  >
+                            <div class="nav-item col">
+                                <a class="nav-link text-white fw-bold d-flex flex-column" aria-current="page"
+                                    href="./index.html">
+                                    <img class="align-self-center imgNav" src="./assets/img/petshoppag.png" alt=""
+                                        style="width: 9rem;">
                                 </a>
                             </div>
                             <div class="nav-item col">
                                 <a class="nav-link text-light fw-bold d-flex flex-column" href="./farmacia.html">
-                                    <img class="align-self-center" src="./assets/img/vetIcono.png" alt="" style="width: 2rem;">
+                                    <img class="align-self-center imgNav" src="./assets/img/vetIcono.png" alt=""
+                                        style="width: 3rem;">
                                     <p class="text-center m-0">Farmacia</p>
                                 </a>
                             </div>
                             <div class="nav-item col">
                                 <a class="nav-link text-light fw-bold d-flex flex-column" href="./contacto.html">
-                                    <img class="align-self-center" src="./assets/img/contactIcono.png" alt="" style="width: 2rem;">
+                                    <img class="align-self-center imgNav" src="./assets/img/contactIcono.png" alt=""
+                                        style="width: 3rem;">
                                     <p class="text-center m-0">Contacto</p>
                                 </a>
                             </div>
@@ -60,44 +71,47 @@
                     </div>
                 </div>
             </nav>
-
         </header>
-        <main class="container-fluid ">
-            <div class="card mb-3" id="tarjetaGrande">
-                <div class="row g-0 h-100">
-                <div class="col-md-6 p-3 border border-dark text-center">
-                <img :src="producto.imagen" class="h-100 rounded-start cardImage w-100" alt="...">
+        <main class="container pt-3 pb-3 d-flex  justify-content-center">
+            <div class="card mb-3 d-flex justify-content-center align-items-center m-0 bg-cremita ps-2 pe-2 border-verdeO" style="max-width: 60rem;" data-aos="zoom-out-up">
+                <div class="row g-0 align-self-center">
+                    <div class="col-md-6 align-self-center">
+                        <img :src="producto.imagen" class="img-fluid rounded-start" alt="...">
+                    </div>
+                    <div class="col-md-6 align-self-center">
+                        <div class="card-body">
+                            <h2 class="card-title text-center fw-bolder text-orange">{{producto.nombre}}</h2>
+                            <p class="card-text text-center fw-light">{{producto.descripcion}}</p>
+                            <div class="d-flex justify-content-around" >
+                                <p class="card-text text-center fw-light" style="height: 2rem;">Precio:<span class="text-success">$</span>{{producto.precio}}</p>
+                                <a :href="" class="btn text-white p-0 m-0 " id="botonCarrito">
+                                    <img src="https://http2.mlstatic.com/storage/developers-site-cms-admin/CDV_ML/279086414570-2106-mla-mlc-mco-como-funciona-el-carrito-de-compras-de-mercado-libre-icono-01.png" alt="" style="width: 3rem;" >
+                                </a>
+                            </div>
+                            <div class="d-flex justify-content-center align-content-center">
+                                <a class="btn bg-cremitaO" id="botonDetalles" @click="regresar()">Regresar</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div id="texto" class="col-md-6 p-3 border border-dark">
-                <div id="texto1" class="card-body">
-                <h5 class="card-title">{{producto.nombre}}</h5>
-                <h6>Category</h6>
-                <p class="card-text">{{producto.category}}</p>
-                <h6>Description</h6>
-                <p class="card-text"> {{producto.descripcion}}</p>
-                <h6>Place</h6>
-                <p class="card-text"> {{producto.stock}}</p>
-                <h6>Price</h6>
-                <p class="card-text">$ {{producto.price}}</p>
-                </div>
-                </div>
-                </div>
-                </div>
+            </div>
         </main>
-        <footer class="container-fluid bg-verdeO d-flex flex-column pt-2    ">
-            <div class="w-100 d-flex justify-content-around align-items-center flex-wrap gap-2">
+        <footer class="container-fluid bg-verdeO d-flex  align-content-center justify-content-center">
+            <div class="w-100 d-flex justify-content-around align-items-center flex-wrap gap-2 p-1">
                 <div class="d-flex justify-content-center align-items-center">
-                    <img class="align-self-center" src="./assets/img/petshopfavicon.png" alt=""
-                        style="max-width: 3rem;">
+                    <a href="#nav">
+                        <img class="align-self-center" src="./assets/img/petshopfavicon.png" alt=""
+                            style="max-width: 3rem;">
+                    </a>
                 </div>
-                <div class="d-flex flex-column ms-2 me-2">
-                    <p class="text-white text-center fw-bold m-0">Nuestas redes</p>
-                    <div class="align-self-center">
+                <div class="d-flex  ms-2 me-2">
+                    <p class="text-white text-center fw-bold m-0">Nuestas redes:</p>
+                    <div class="align-self-center ms-2">
                         <a href="">
-                            <img src="./assets/img/logoinsta.png" alt="" style="width: 1rem;">
+                            <img src="./assets/img/logoinsta.png" alt="" style="width: 2rem;">
                         </a>
                         <a href="">
-                            <img src="./assets/img/facebook-logo.png" alt="" style="width: 1rem;">
+                            <img src="./assets/img/facebook-logo.png" alt="" style="width: 2rem;">
                         </a>
                     </div>
                 </div>
@@ -106,8 +120,7 @@
                 </div>
                 <div class="d-flex justify-content-center align-items-center p-3">
                     <p class="text-white text-center fw-bold m-0">Medios de pago:</p>
-                    <img src="https://www.sumaelectrohogar.com.ar/img/cms/medios-de-pago-suma(2).png" alt=""
-                        style="max-width: 10rem;">
+                    <img src="./assets/img/tarjetas.png" alt="" style="max-width: 10rem;">
                 </div>
             </div>
         </footer>
@@ -116,11 +129,11 @@
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="./assets/js/main.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
-      </script>
+    </script>
 </body>
 
 </html>
