--- a/PETSHOP FINAL/index.html
+++ b/PETSHOP FINAL/index.html
@@ -23,47 +23,46 @@
             <nav class="navbar navbar-expand-md bg-verdeO" id="nav">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="./index.html">
-                        <img src="./assets/img/losChicuelosletra.png" alt="" id="letrasChicuelos"
-                            style="max-width: 6rem" />
+                        <img src="./assets/img/losChicuelosletra.png" alt="" id="letrasChicuelos" style="max-width: 6rem;">
                     </a>
                     <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                         aria-label="Toggle navigation">
-                        <span><img src="./assets/img/petshopfavicon.png" alt="" style="width: 2rem" /></span>
+                        <span><img src="./assets/img/petshopfavicon.png" alt="" style="width: 2rem;"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <div class="navbar-nav row w-100">
-                            <div class="nav-item col active">
+                            <div class="nav-item col">
                                 <a class="nav-link text-light fw-bold d-flex flex-column" href="./index.html">
-                                    <img class="align-self-center imgNav" src="./assets/img/homeIcono.png"
-                                        alt="logo de inicio" style="width: 3rem" />
+                                    <img class="align-self-center imgNav" src="./assets/img/homeIcono.png" alt="logo de inicio"
+                                        style="width: 3rem;">
                                     <p class="text-center m-0">Inicio</p>
                                 </a>
                             </div>
                             <div class="nav-item col">
                                 <a class="nav-link text-light fw-bold d-flex flex-column" href="./jugueteria.html">
                                     <img class="align-self-center imgNav" src="./assets/img/toysIconos.png" alt=""
-                                        style="width: 3rem" />
+                                        style="width: 3rem;">
                                     <p class="text-center m-0">Juguetes</p>
                                 </a>
                             </div>
-                            <div class="nav-item col" id="logoNav">
-                                <a class="nav-link text-white fw-bold d-flex flex-column" aria-current="page" href="#">
-                                    <img class="align-self-center imgNav" src="./assets/img/petshoppag.png" alt=""
-                                        style="width: 9rem" />
+                            <div class="nav-item col">
+                                <a class="nav-link text-white fw-bold d-flex flex-column" aria-current="page" href="./index.html">
+                                    <img class="align-self-center imgLogoNav" src="./assets/img/petshoppag.png" alt=""
+                                        style="width: 9rem;">
                                 </a>
                             </div>
                             <div class="nav-item col">
                                 <a class="nav-link text-light fw-bold d-flex flex-column" href="./farmacia.html">
                                     <img class="align-self-center imgNav" src="./assets/img/vetIcono.png" alt=""
-                                        style="width: 3rem" />
+                                        style="width: 3rem;">
                                     <p class="text-center m-0">Farmacia</p>
                                 </a>
                             </div>
                             <div class="nav-item col">
                                 <a class="nav-link text-light fw-bold d-flex flex-column" href="./contacto.html">
                                     <img class="align-self-center imgNav" src="./assets/img/contactIcono.png" alt=""
-                                        style="width: 3rem" />
+                                        style="width: 3rem;">
                                     <p class="text-center m-0">Contacto</p>
                                 </a>
                             </div>
@@ -124,10 +123,10 @@
                             aria-label="Slide 4"></button>
                     </div>
                     <div class="carousel-inner">
-                        <div class="carousel-item active">
+                        <div class="carousel-item">
                             <img src="./assets/img/banner1.png" class="d-block w-100" alt="..." />
                         </div>
-                        <div class="carousel-item">
+                        <div class="carousel-item active">
                             <img src="./assets/img/banner2.png" class="d-block w-100" alt="..." />
                         </div>
                         <div class="carousel-item">
