--- a/PETSHOP FINAL/jugueteria.html
+++ b/PETSHOP FINAL/jugueteria.html
@@ -84,6 +84,34 @@
             <div v-if="buscador ==''" class="container-fluid p-0">
                 <img src="./assets/img/banner1.png" alt="" class="w-100">
             </div>
+            <div id="logoCarrito" class="submenu">
+                <a v-if="carrito.length==0" class="w-100" href="./carrito.html"><img src="./assets/img/carrito.png" alt=""></a>
+                <a v-if="carrito.length!=0" class="w-100" href="./carrito.html"><img src="./assets/img/carrito1.png" alt=""></a>
+                <div id="carrito">
+
+                    <table id="lista-carrito" class="u-full-width">
+                        <thead>
+                            <tr>
+                                <th>Imagen</th>
+                                <th>Nombre</th>
+                                <th>Precio</th>
+                                <th>Cantidad</th>
+                                <th></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr v-for="producto in carrito">
+                                <td><img :src="producto.imagen" alt=""></td>
+                                <td>{{producto.nombre}}</td>
+                                <td>{{producto.precio}}</td>
+                                <td></td>
+                            </tr>
+                        </tbody>
+                    </table>
+
+                    <a href="#" id="vaciar-carrito" class="button u-full-width">Vaciar Carrito</a>
+                </div>
+            </div>
             <div v-if="productos.length== 0 && productosBk.length!=0" class="contenedor d-flex justify-content-center">
                 <img class="w-25 h-25" src="./assets/img/perroBuscador.png" alt="">
             </div>
