--- a/PETSHOP FINAL/index.html
+++ b/PETSHOP FINAL/index.html
@@ -173,7 +173,7 @@
                         </tbody>
                     </table>
 
-                    <a href="#" id="vaciar-carrito" class="button u-full-width">Vaciar Carrito</a>
+                    <a @click.prevent="vaciarCarrito()" href="#" id="vaciar-carrito" class="button u-full-width">Vaciar Carrito</a>
                 </div>
             </div>
 
