--- a/PETSHOP FINAL/carrito.html
+++ b/PETSHOP FINAL/carrito.html
@@ -73,18 +73,20 @@
                 <table class="table">
                     <thead>
                         <tr>
+                            <th scope="col">Imagen</th>
                             <th scope="col" class="col-6">Producto</th>
-                            <th scope="col">Cantidad</th>
                             <th scope="col">Precio</th>
+                            <th scope="col">Cantidad</th>
                             <th scope="col">Total</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <td>1</td>
-                            <td>Mark</td>
-                            <td>Otto</td>
+                        <tr v-for="producto in carrito">
+                            <td><img :src="producto.imagen" alt=""></td>
+                            <td>{{producto.nombre}}</td>
+                            <td>{{producto.precio}}</td>
                             <td>@mdo</td>
+                            <td :innerHTML="producto.precio*cantidad"></td>
                         </tr>
                     </tbody>
                 </table>
