funciones de carrito, sweets alert y eliminado el buscador

--- a/PETSHOP FINAL/index.html
+++ b/PETSHOP FINAL/index.html
@@ -70,13 +70,6 @@
                     </div>
                 </div>
             </nav>
-            {{filtro}}
-            <form class="bg-verdeO d-flex justify-content-center">
-                <div class="col-auto mb-2">
-                    <input v-model="buscador" class="form-control" type="text" placeholder="Buscar en la Página"
-                        aria-label="default input example" />
-                </div>
-            </form>
         </header>
         <main class="container-fluid">
             <div class="gap-3 mb-5">
@@ -85,32 +78,7 @@
                     Encontrá todo lo que necesitas para tu mascota
                 </h2>
             </div>
-            <div v-if="productos.length== 0 && productosBk.length!=0" class="contenedor d-flex justify-content-center">
-                <img class="w-25 h-25" src="./assets/img/perroBuscador.png" alt="">
-            </div>
-            <div v-if="buscador!=''" class="row p-md-3 p-2 gap-4 flex-wrap justify-content-center container-fluid"
-                data-aos="zoom-in-up" data-aos-once="true">
-                <div v-for="producto in productos" class="card border-verdeO" id="card">
-                    <img :src="producto.imagen" class="card-img-top h-50" alt="{{producto.nombre}}">
-                    <div class="card-body d-flex flex-column justify-content-between border-top bg-cremita">
-                        <h3 class="card-title text-center fw-bolder text-orange" style="height: 2rem;">
-                            {{producto.nombre}}</h3>
-                        <p class="card-text text-center fw-light" style="height: 2rem;">Precio:<span
-                                class="text-success">$</span>{{producto.precio}}</p>
-                        <div class="d-flex justify-content-around">
-                            <a :href="'./detalles.html?id='+producto._id"
-                                class="btn bg-cremitaO text-black p-2 m-0 align-self-center justify-content-center"
-                                id="botonDetalles">Detalles</a>
-                            <a href="" class="btn text-white p-0 m-0 " @click.prevent="agregarCarrito(producto)"
-                                id="botonCarrito">
-                                <img src="https://http2.mlstatic.com/storage/developers-site-cms-admin/CDV_ML/279086414570-2106-mla-mlc-mco-como-funciona-el-carrito-de-compras-de-mercado-libre-icono-01.png"
-                                    alt="" style="width: 3rem;">
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div v-if="buscador==''">
+            <div>
                 <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true" data-aos="zoom-in">
                     <div class="carousel-indicators">
                         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
