--- a/PETSHOP FINAL/contacto.html
+++ b/PETSHOP FINAL/contacto.html
@@ -44,11 +44,10 @@
                                     <p class="text-center m-0">Juguetes</p>
                                 </a>
                             </div>
-                            <div class="nav-item col" id="logoNav">
-                                <a class="nav-link text-white fw-bold d-flex flex-column" aria-current="page"
-                                    href="./index.html">
-                                    <img class="align-self-center imgNav" src="./assets/img/petshoppag.png" alt=""
-                                        style="width: 9rem;">
+                            <div class="nav-item col">
+                                <a class="nav-link text-white fw-bold d-flex flex-column" aria-current="page" href="./index.html" >
+                                    <img class="align-self-center imgLogoNav" src="./assets/img/petshoppag.png" alt=""
+                                        style="width: 9rem;" id="logoNav">
                                 </a>
                             </div>
                             <div class="nav-item col">
@@ -163,13 +162,10 @@
                 </section>
             </div>
         </main>
-<<<<<<< HEAD
         <footer class="container-fluid bg-verdeO d-flex  align-content-center justify-content-center">
             <div class="w-100 d-flex justify-content-around align-items-center flex-wrap gap-2 p-1">
-=======
         <footer class="container-fluid bg-verdeO d-flex flex-column pt-2">
             <div class="w-100 d-flex justify-content-around align-items-center flex-wrap gap-2">
->>>>>>> origin/Agustin
                 <div class="d-flex justify-content-center align-items-center">
                     <a href="#nav">
                         <img class="align-self-center" src="./assets/img/petshopfavicon.png" alt=""
