agregar stock a cards

--- a/PETSHOP FINAL/farmacia.html
+++ b/PETSHOP FINAL/farmacia.html
@@ -92,6 +92,7 @@
                             <h3 class="text-orange fw-bolder">{{producto.nombre}}</h3>
                             <p class="descripcion">{{producto.descripcion}}</p>
                             <div class="d-flex justify-content-around align-content-center p-2">
+                                <h3>Stock:<span class="text-white">{{producto.stock}}</span></h3>
                                 <h3><span class="text-success">$</span>{{producto.precio}}</h3>
                                 <a href="#">
                                     <img src="https://http2.mlstatic.com/storage/developers-site-cms-admin/CDV_ML/279086414570-2106-mla-mlc-mco-como-funciona-el-carrito-de-compras-de-mercado-libre-icono-01.png" >
@@ -127,6 +128,7 @@
                             <h3 class="text-orange fw-bolder">{{producto.nombre}}</h3>
                             <p class="descripcion">{{producto.descripcion}}</p>
                             <div class="d-flex justify-content-around align-content-center p-2">
+                                <h3>Stock:<span class="text-white">{{producto.stock}}</span></h3>
                                 <h3><span class="text-success">$</span>{{producto.precio}}</h3>
                                 <a href="#">
                                     <img src="https://http2.mlstatic.com/storage/developers-site-cms-admin/CDV_ML/279086414570-2106-mla-mlc-mco-como-funciona-el-carrito-de-compras-de-mercado-libre-icono-01.png" >
