--- a/PETSHOP FINAL/index.html
+++ b/PETSHOP FINAL/index.html
@@ -19,7 +19,7 @@
 
 <body>
     <div id="app">
-        <header>
+        <header id="header">
             <nav class="navbar navbar-expand-md bg-verdeO" id="nav">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="./index.html">
@@ -204,9 +204,18 @@
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
+            <div id="arriba">
+                <a href="#header">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-bar-up text-white" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M8 10a.5.5 0 0 0 .5-.5V3.707l2.146 2.147a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 1 0 .708.708L7.5 3.707V9.5a.5.5 0 0 0 .5.5zm-7 2.5a.5.5 0 0 1 .5-.5h13a.5.5 0 0 1 0 1h-13a.5.5 0 0 1-.5-.5z"/>
+                    </svg>
+                    <img class="align-self-center" src="./assets/img/petshopfavicon.png" alt=""
+                    style="max-width: 2.5rem;">
+                </a>
+            </div>
         </main>
         <footer class="container-fluid bg-verdeO d-flex  align-content-center justify-content-center">
-            <div class="w-100 d-flex justify-content-around align-items-center flex-wrap gap-2 p-1">
+            <div class="w-100 d-flex justify-content-center align-items-center flex-wrap gap-5 p-1">
                 <div class="d-flex justify-content-center align-items-center">
                     <a href="#nav">
                         <img class="align-self-center" src="./assets/img/petshopfavicon.png" alt=""
