Finalice los detalles de contact

--- a/PETSHOP FINAL/contacto.html
+++ b/PETSHOP FINAL/contacto.html
@@ -71,8 +71,8 @@
                 </div>
             </nav>
         </header>
-        <main class="container-fluid d-flex justify-content-center p-4">
-            <div class="d-flex flex-column justify-content-between align-items-center contenedor-contacto p-4">
+        <main class="container-fluid d-flex justify-content-center contenedorTodo p-4">
+            <div class="d-flex flex-column justify-content-between align-items-center contenedor-contacto p-2"> 
                 <div class="d-flex flex-column align-items-center justify-content-center gap-3 mt-4 flex-wrap" role="group"
                     aria-label="Basic radio toggle button group">
                     <div class="d-flex justify-content-center">
@@ -116,50 +116,29 @@
                 </section>
                 <section class="d-flex justify-content-center flex-column align-items-center text-center">
                     <h2>Para contactarte con nuestros especialistas</h2>
-                    <div class="d-flex flex-wrap justify-content-center gap-3">
-                    <div class="d-flex flex-column align-items-center text-center" style="width: 6.6rem">
-                    <p class="d-flex flex-wrap">
-                        <a class="btn botonTelefono btn-outline-light" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-                        Telefono
-                        </a>
-                    </p>
-                    <div class="collapse" id="collapseExample">
-                        <div class="card card-body p-1">
-                            <p class="mt-1 mb-1" style="font-size: 1rem;">387-432152</p>
-                            <p class="mt-1 mb-1" style="font-size: 1rem;">011-587463</p>
-                            <p class="mt-1 mb-1" style="font-size: 1rem;">387-564758</p>
-                            <p class="mt-1 mb-1" style="font-size: 1rem;">381-501554</p>
+                    <div class=" contenedorContactos d-flex justify-content-center">
+                        <div class="cardTelefono text-center d-flex flex-column justify-content-center">
+                            <h2 cartaTelefono>Teléfono</h2>
+                            <p>3875461875</p>
+                            <p>3814875921</p>
+                            <p>0115977518</p>
                         </div>
-                    </div>
-                    </div>
-                    <div class="d-flex flex-column align-items-center "style="width: 14.4rem" >
-                        <p class="d-flex flex-wrap">
-                            <a class="btn botonEmail btn-outline-light" data-bs-toggle="collapse" href="#collapseExample2" role="button" aria-expanded="false" aria-controls="collapseExample2">
-                            Email
-                            </a>
-                        </p>
-                        <div class="collapse" id="collapseExample2">
-                            <div class="card card-body p-1">
-                                <p class="mt-1 mb-1" style="font-size: 1rem;">chicuelos@hotmail.com</p>
-                                <p class="mt-1 mb-1" style="font-size: 1rem;">chicuelos@gmail.com</p>
+                        <div class="cardEmail text-center d-flex flex-column justify-content-center w-45 p-3">
+                            <h2>Email</h2>
+                                <p>loschicuelos@gmail.com</p>
+                                <p>loschicuelos@hotmail.com</p>
+                                <p>loschicuelos@yahoo.com</p>
+                        </div>
+                        <div class="cardUbi text-center d-flex flex-column justify-content-center">
+                            <div class="d-flex justify-content-around">
+                            <h2>Ubicación</h2>
+                            </div>
+                            <div>
+                                <p>Rio de Janeiro 300</p>
                             </div>
                         </div>
-                        </div>
-                        <div class="d-flex flex-column align-items-center" style="width: 4.8rem">
-                            <p class="d-flex flex-wrap text-center">
-                                <a class="btn botonUbi btn-outline-light" data-bs-toggle="collapse" href="#collapseExample3" role="button" aria-expanded="false" aria-controls="collapseExample3">
-                                Ubicacion
-                                </a>
-                            </p>
-                            <div class="collapse" id="collapseExample3">
-                                <div class="card card-body p-1">
-                                    <p class="mt-1 mb-1" style="font-size: 1rem;">Rio De Janeiro 300</p>
-                                    
-                                </div>
-                            </div>
-                            </div>
                     </div>
-                </div>
+                
                 </section>
             </div>
         </main>
