--- a/PETSHOP FINAL/index.html
+++ b/PETSHOP FINAL/index.html
@@ -132,11 +132,11 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr v-for="producto in carrito">
-                                <td><img :src="producto.imagen" alt=""></td>
+                            <tr v-for="producto in carrito" class="text-center">
+                                <td><img class="w-50 h-50" :src="producto.imagen" alt=""></td>
                                 <td>{{producto.nombre}}</td>
                                 <td>{{producto.precio}}</td>
-                                <td></td>
+                                <td>{{producto.__v}}</td>
                             </tr>
                         </tbody>
                     </table>
